# spl-governance-registry

./: .gitignore  Anchor.toml  package-lock.json  package.json
programs/certificate-registry/: Cargo.toml
programs/certificate-registry/src/: lib.rs
programs/governance-registry/: Cargo.toml
programs/governance-registry/src/: lib.rs
programs/permissionless-registry/: Cargo.toml
programs/permissionless-registry/src/: lib.rs
programs/permissionless-verifiable-registry/src/: lib.rs
programs/permissionless-verifiable-schema-registry/: Cargo.toml
programs/permissionless-verifiable-schema-registry/src/: lib.rs  schema.json
programs/permissionless-verifiable-updateable-registry/: Cargo.toml
programs/permissionless-verifiable-updateable-registry/src/: lib.rs
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
programs/verified-registry/: Cargo.toml
programs/verified-registry/src/: lib.rs
tests/: package-lock.json  package.json  permissionless-verifiable-registry.js  permissionless-verifiable-schema-registry.js  program.js
