[package]
name = "governance_registry"
version = "0.1.0"
description = "Solana permissionless, verifiable registry for governance data"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "permissionless_verifiable_registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
